# dusty-study

./: Cargo.toml  README.md  build.sh  index.html  netlify.toml  serve.sh
.github/workflows/: pr_check.yml
dataset/: .gitignore  Cargo.toml  download-dictionary.sh  extract_words.sh
dataset/src/: main.rs
netlify/functions/hello/: Cargo.toml
netlify/functions/hello/src/: database.rs  main.rs
netlify/functions/hello/src/database/data/: example.rs  generated.rs
netlify/functions/solve/: Cargo.toml
netlify/functions/solve/src/: main.rs
netlify/functions/solve/src/database/data/: generated.rs  mod.rs
src/: app.rs
src/app/components/: content.rs  mod.rs  scrambler.rs  solver.rs
src/app/services/: mod.rs  solving.rs
