[package]
name = "gram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version="0.20", features=["csr"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
gloo-console = "0.2.3"
