[package]
name = "dusty-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo-console = "0.3"
gloo-net = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version="0.20", features=["csr"] }
