[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.11"
http = "0.2"
itertools = "0.11"
lambda_http = "0.8"
log = "0.4"
once_cell = "1.18"
serde_json = { version = "1.0" }
simple_logger = "4.2"
tokio = "1.32"
